name:                hackernewsfeed
version:             0.1.0.0
synopsis:            Hackernews feed, twitter bot
description:         Please see README.md
homepage:            https://github.com/antonlogvinenko/hackernewsfeed
license:             BSD3
license-file:        LICENSE
author:              Anton Logvinenko
maintainer:          anton.logvinenko@gmail.com
copyright:           2016 Anton Logvinenko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hackernewsfeed
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson ==1.2.1.0
                     , bytestring ==0.10.8.2
                     , raw-strings-qq ==1.1
                     , wreq ==0.5.1.0
                     , lens ==4.15.4
                     , directory ==1.3.0.2
                     , transformers ==0.5.2.0
                     , MissingH ==1.4.0.1
                     , text ==1.2.2.2